--- a/Flashcard 2b/index.html
+++ b/Flashcard 2b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcards 2b</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Flashcard</title>
 </head>
 <body>
     <main>
@@ -12,10 +13,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JavaScript?
+                       <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        JavaScript é uma linguagem de programação.
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
             </article>
@@ -23,17 +24,28 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                        <p>O que é CSS?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        CSS é uma linguagem de estilização.
+                        <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>O CSS é uma linguagem de estilização</p>
                     </div>
                 </div>
             </article>
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pelo Pedro, sem fins lucrativos</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
 </body>
 </html>
